--- a/functions/package.json
+++ b/functions/package.json
@@ -5,5 +5,9 @@
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "ts-loader": "^2.2.2",
+    "webpack-node-externals": "^1.6.0"
+  }
 }
