--- a/functions/package.json
+++ b/functions/package.json
@@ -1,6 +1,11 @@
 {
   "name": "functions",
   "description": "Cloud Functions for Firebase",
+  "scripts": {
+    "start": "",
+    "build": "webpack",
+    "deploy": "firebase deploy --only functions"
+  },
   "dependencies": {
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5"
