--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,10 +1,18 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "lib": [
+            "es6",
+            "es2015.promise"
+        ],
         "module": "commonjs",
+        "target": "es6",
         "outDir": "./",
+        "sourceMap": true,
         "noImplicitAny": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "typeRoots": [
+            "node_modules/@types"
+        ]
     },
     "include": [
         "src/**/*.ts"
