--- a/functions/package.json
+++ b/functions/package.json
@@ -7,6 +7,8 @@
     "deploy": "firebase deploy --only functions"
   },
   "dependencies": {
+    "@types/cors": "^2.8.1",
+    "cors": "^2.8.4",
     "firebase-admin": "^4.1.2",
     "firebase-functions": "^0.5"
   },
