--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,8 @@
     "@types/cors": "^2.8.1",
     "cors": "^2.8.4",
     "firebase-admin": "^5.5.1",
-    "firebase-functions": "^0.5"
+    "firebase-functions": "^0.5",
+    "request": "^2.83.0"
   },
   "private": true,
   "devDependencies": {
