--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.1",
+    "@types/request": "^2.0.9",
+    "actions-on-google": "^1.7.0",
     "cors": "^2.8.4",
     "firebase-admin": "^5.5.1",
     "firebase-functions": "^0.5",
