--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "actions-on-google": "^1.8.2",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
     "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1"
+    "firebase-functions": "^0.8.1",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "tslint": "^5.8.0",
